# kanban-coffee

./: .gitignore  Dockerfile  cleanscode.sh  docker-compose.yml  pyproject.toml
app/: app.py  config.py  db_init.py
app/controller/: auth.py  main.py
app/model/: shared_model.py
app/static/: error.json
app/static/css/: base.css  snackbar.css
app/static/js/: snackbar.js
app/utils/: app_security.py  app_utils.py  manage_config.py  manage_controller.py  manage_error.py  manage_logs.py  manage_requirements.py
app/view/auth/: index.html  login.html  register.html
app/view/common/: base.html  erreur.html
app/view/main/: index.html  profile.html
app/view/partials/: footer.html  top-flash.html
